--- a/todo-service.yaml
+++ b/todo-service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
     labels:
-        app: django-app
-    name: django-app
+        app: ingress-upstream
+    name: ingress-upstream
     namespace: default
 spec:
     ports:
-    - name: 80-8000
+    - name: 80-8080
       port: 80
       protocol: TCP
       targetPort: 80
